# nc-snapshot

./: .gitmodules  Cargo.toml  DEVLOG.md  LICENSE  README.md  SECURITY.md  SOLUTION_FINAL.md  TESTING.md
.github/workflows/: release.yml
bridge-bin/: NineChronicles.Snapshot  NineChronicles.Snapshot.Bridge  NineChronicles.Snapshot.Bridge.deps.json
bridge-bin/bridge-source-recuperado/: NineChronicles.Snapshot.Bridge.decompiled.cs
bridge-bin/bridge-source-recuperado-readonly/: NineChronicles.Snapshot.Bridge.csproj  Program.cs
bridge-bin/checkpoint/: CheckpointBridge.deps.json
checkpoint-bridge-for-rust/: CheckpointBridge.csproj  ListMethods.csx  Program.cs  README.md
checkpoint-bridge-for-rust/GcPipeline/: GcBfsFilter.cs  GcExporter.cs  GcPipeline.cs  GcResult.cs  GcWriter.cs  INTEGRATION_GUIDE.md  README.md
docs/: production-run.md
examples/: debug_txhash.rs  generate_fixture.rs  inspect_digest.rs  test_reader.rs
inspect/: InspectMethods.cs
nc-snapshot-rs/: Cargo.toml  README.md
nc-snapshot-rs/.cargo/: config.toml
nc-snapshot-rs/benches/: bencodex_bench.rs
nc-snapshot-rs/src/: chain_cleanup.rs  lib.rs  main.rs  prune.rs  state_trie.rs
nc-snapshot-rs/src/trie/: bencodex.rs  bloom.rs  chain_reader.rs  mod.rs  node.rs  pruner.rs  sst_writer.rs
nc-snapshot-rs/tests/: integration_test.rs
src/: chain_reader.rs  checkpoint_secondary.rs  errors.rs  exporter.rs  gc_filter.rs  io_util.rs  lib.rs  main.rs  main.rsOLD  metadata.rs  node_detect.rs  pipeline.rs  pruner.rs  snapshot.rs  types.rs  verify.rs
tests/: chain_reader_integration.rs
tests/fixtures/mini-chain/block/blockindex/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
tests/fixtures/mini-chain/block/epoch0/: IDENTITY  LOG  MANIFEST-000005
tests/fixtures/mini-chain/chain/: IDENTITY  LOG  MANIFEST-000005
