[package]
name = "nc-snapshot"
version = "0.1.0"
edition = "2021"
description = "Nine Chronicles blockchain state snapshot tool"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
walkdir = "2.5"
zstd = { version = "0.13", features = ["zstdmt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
