[package]
name = "nc-snapshot"
version = "0.1.0"
edition = "2021"
description = "Nine Chronicles blockchain state snapshot tool"

[dependencies]
anyhow = "1"
rayon = "1.10"
blake3 = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
rocksdb = "0.24"
tempfile = "3"
thiserror = "2"
walkdir = "2.5"
zstd = { version = "0.13", features = ["zstdmt"] }
memmap2 = "0.9.11"
hex = "0.4"
rustc-hash = "2"
memchr = "2.7"
bencodex = { git = "https://github.com/moreal/bencodex-rs.git", package = "bencodex-rs", rev = "97d9660ca9f33020ace4d346ad3e256d2334a181" }

[lib]
name = "nc_snapshot"
path = "src/lib.rs"

[[bin]]
name = "nc-snapshot"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
